--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,22 @@
         android:theme="@style/Theme.MyCourseCompose"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".JetpackComponentsCatalogTheme"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.MyCourseCompose">
+            android:label="@string/title_activity_jetpack_components_catalog_theme"
+            android:theme="@style/Theme.MyCourseCompose" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MyCourseCompose">
+
         </activity>
     </application>
 
